# amber

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  contract.wasm  package.json  requirements.txt  tsconfig.json
.github/workflows/: Basic.yml  Integration.yml
airdrop/: README.md
airdrop/deploy/: integration.ts  token2testnet.ts
airdrop/merkle-distributor/: README.md  hash.txt
airdrop/snapshot-scripts/: snapshot_secret.py
amburnft/: .gitignore  Cargo.toml  Makefile  hash.txt
amburnft/examples/: schema.rs
amburnft/src/: contract.rs  msg.rs  state.rs  unittest_handles.rs  unittest_mint_run.rs  unittest_non_transferable.rs  unittest_queries.rs  unittest_royalties.rs
deploy/: contract_info  deploy-single-contract.ts  integration.ts  nft-contract.ts  package.json  token2testnet.ts
docs/: contracts.json  migration-log.md  og-amber-init.json
front-end/: .env_example  .gitignore  LICENSE.md  README.md  index.html  package.json  vite.config.js
front-end/src/: confetti.js  main.ts  style.css
merkle-distributor/: Cargo.toml  Makefile  NOTICE  contract.wasm  hash.txt
merkle-distributor/examples/: schema.rs
merkle-distributor/schema/: init_msg.json  query_msg.json
merkle-distributor/src/: contract.rs  merkle_proof.rs  msg.rs  state.rs
merkle-distributor/tests/: integration.sh  setup.sh
messages/: contracts.json  instantiate_amber_snip_25.json
scripts/: bech32_to_bytes.cjs  create_tree.js  query_stakers.js  snapshot_secret.py
snip20-reference-impl/: .gitignore  Makefile  hash.txt
snip20-reference-impl/src/: contract.rs  msg.rs  state.rs  transaction_history.rs
token/: .gitignore  Cargo.toml  Makefile  hash.txt
token-migrator/: .gitignore  Cargo.toml  Makefile
token-migrator/examples/: schema.rs
token-migrator/src/: contract.rs  msg.rs  state.rs
token-migrator/tests/: deploy.ts  integration.ts  package.json
token/examples/: schema.rs
(+42 files in other folders)
