[workspace]
members = ["merkle-distributor", "snip20-reference-impl"]
exclude = ["contract.wasm.gz", "hash.txt"]
# exclude = ["snip20-reference-impl"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
